fixed navbar spacing

--- a/static/styles/mystyles.css
+++ b/static/styles/mystyles.css
@@ -375,16 +375,20 @@ input[type=checkbox]#hoodMap:checked:before {
   }
 
   .map-header {
-    font-size: 16px;
-    line-height: 16px;
+      font-size: 20px;
   }
 
   .navbar-default .navbar-brand {
       font-size: 25px;
+      line-height: 17px;
   }
 
   .navbar-header {
-      height: 50px;
+      height: 40px;
+  }
+
+  .navbar-toggle {
+      margin-top: 8px;
   }
 }
 
